[tool.poetry]
name = "taski-docker"
version = "0.1.0"
description = "A Docker automatization sample."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.10"
django = "3.2.16"
djangorestframework = "3.12.4"
django-cors-headers = "3.13.0"
psycopg2-binary = "2.9.3"
python-dotenv = "^1.0.0"
djangorestframework-stubs = "^3.14.5"
django-stubs = "^4.2.7"


[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
mypy = "^1.18.2"
ruff = "^0.14.4"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "backend.settings"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
